--- a/contact.html
+++ b/contact.html
@@ -232,7 +232,7 @@
                             <div class="row g-0">
                                 <div class="col-9">
                                     <div class="p-4 pe-0">
-                                        <h4 class="display-5 mb-0">Want To Join Our Talanded Team</h4>
+                                        <h4 class="display-5 mb-0">Want To Join Our  Team</h4>
                                         <div class="d-flex align-items-center">
                                             <a href="index.html" class="h5 mb-0 me-3"> Become a Hacker Today </a>
                                             <a class="text-primary py-3" href="https://arcade.name.ng/ "><i class="fas fa-play-circle me-2"></i></a>
